# flask-dash-app

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  docker-compose.yml  heroku.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  tests.yml
app/: main.py  routes.py
app/dash/: crossfilter_example.py  dash.py  demo.py  iris_kmeans.py
app/templates/: base.html  dash.html  index.html
app/templates/partials/: footer.html  jquery.html  navbar.html  scripts.html
tests/unit/: conftest.py  test_main.py
tests/unit/dash/: conftest.py  test_common.py  test_crossfilter_example.py  test_dash.py  test_demo.py  test_iris_kmeans.py
