[tool.poetry]
name = "flask-dash-app"
version = "0.1.0"
description = "Integrate Plotly Dash into your Flask applications."
authors = ["tzelleke <theodros.zelleke@gmail.com>"]
maintainers = ["tzelleke <theodros.zelleke@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tzelleke/flask-dash-app"
keywords = [
    "Flask",
    "Plotly",
    "Plotly Dash",
    "Data Science"
]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.3"
dash = "^2.8.1"
dash-bootstrap-components = "^1.4.0"
pandas = "^1.5.3"
scikit-learn = "^0.24.2"
Markdown = "^3.4.1"
python-dotenv = "^0.19.2"
Pygments = "^2.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
