[tool.poetry]
name = "flask-dash-app"
version = "0.1.0"
description = "Integrate Plotly Dash into your Flask applications."
authors = ["tzelleke <it@tzelleke.com>"]
maintainers = ["tzelleke <it@tzelleke.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tzelleke/flask-dash-app"
keywords = [
    "Flask",
    "Plotly",
    "Plotly Dash",
    "Data Science"
]

[tool.poetry.dependencies]
python = "~3.11"
dash = "^2.13.0"
dash-bootstrap-components = "^1.5.0"
flask = "<2.3"
markdown = "^3.4.4"
pandas = "^2.1.1"
pygments = "^2.16.1"
python-dotenv = "^1.0.0"
scikit-learn = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
